# azspheretwofactorauth

./: .gitignore  README.md
src/AzureTwoFactorAuth/: AzureTwoFactorAuth.sln
src/AzureTwoFactorAuth/AzureSphereAuthenticationBackend/: launch.vs.json
src/AzureTwoFactorAuth/AzureSphereAuthenticationBackend/HighLevelCore/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  azure_iot_utilities.c  launch.vs.json  main.c
src/AzureTwoFactorAuth/AzureSphereAuthenticationBackend/RealTimeCore/: CMakeLists.txt  app_manifest.json  launch.vs.json
src/AzureTwoFactorAuth/Framework.Services.Storage/: Framework.Services.Storage.csproj  ITableService.cs  TableService.cs
src/AzureTwoFactorAuth/RecorderAzureFunction/: DeviceMessageRecorderFunction.cs  RecorderAzureFunction.csproj
src/AzureTwoFactorAuth/TwoFactorAuthentication.Services.Contracts/Entities/: TwoFactorRequestEntity.cs
src/AzureTwoFactorAuth/TwoFactorAuthenticationWebApp/: Dockerfile  Program.cs  Startup.cs  TwoFactorAuthenticationWebApp.csproj  appsettings.json
src/AzureTwoFactorAuth/TwoFactorAuthenticationWebApp/Controllers/: HomeController.cs  LoginController.cs  SecondFactorController.cs  ValidatorController.cs
src/AzureTwoFactorAuth/TwoFactorAuthenticationWebApp/Models/: ErrorViewModel.cs  SecondFactorModel.cs
src/AzureTwoFactorAuth/TwoFactorAuthenticationWebApp/Properties/: launchSettings.json
src/AzureTwoFactorAuth/TwoFactorAuthenticationWebApp/Views/: _ViewImports.cshtml
src/AzureTwoFactorAuth/TwoFactorAuthenticationWebApp/Views/Login/: Index.cshtml
(+2 files in other folders)
